- add roaming derelict fleets to uninhabited arty systems

- Add something that lets you remove S-Mods
- Change derelict industries to superstructures
- Artillery industry images

missiles are underwhelming in combat, increase overload dur
add explosion sound to mortar
watchtower faction is irrellevant atm, make it care about which faction saw you

--------------------------- known issues -----------------------------

Added - Behaviour: Deliver (Transports cargo to planet, delivers it into storage, then returns to your fleet)
DELIVER FLEETS REFUSE TO LEAVE SYSTEM AFTER DELIVERY; MAYBE MOVE INTO HYPERSPACE OR MANUALLY SET MOVE TARGET?

hey with the current IndEvo patch all my crew in the detachment are getting eaten up after a day has passed.
 The pattern is 1 full day after creating the detachment.
 So if I create the detachment half way through Feb 19th, the crew disappear when it turns Feb 21st.

ok so uh, one more issue if you arent aware, if you have a detachment stationed in another system, and you are in a different solar system
i dont think the detachment actually moves

--------------------------- upcoming -----------------------------
merc industry - https://discord.com/channels/815017574642483240/984638767279251468/1009925859630661783
trade hub
Colony Ship

Optional:
add ambassadors as contacts see https://discord.com/channels/815017574642483240/815039421656203274/932024688543158293
Story point option for academy, "Recruit Local Talent", for when you really want an officer or admin
Arena

adjust salvage event "Ship Roulette" -
    add the option to connect the output of a colony to the station
    always require Metal, ship components and machinery
    Let player choose between runtime of 1 month, 2, 3 or 4 then deliver the output and the station salvage to the colony
    add an intel entry showing the progress

-----------------------o-----------------------

3.1.d - UNRELEASED
Items
Adjusted - Particle colour now properly works off sun colour