@@ -12,6 +12,7 @@ todo consumable item that allows forced targetting of artillery on mouse pos
 missiles are underwhelming in combat, increase overload dur
 add explosion sound to mortar
 watchtower faction is irrellevant atm, make it care about which faction saw you
+make watchtower sensor profile in line with vanilla
 
 --------------------------- known issues -----------------------------
 
